--- a/Attendance.css
+++ b/Attendance.css
@@ -1,5 +1,6 @@
 body{
     background: blue;
+    height:auto;
 }
 h1
 {
@@ -31,7 +32,7 @@ h1
     height: auto;
     text-align: center;
     padding: 6px;
-    font-size: 30px;
+    font-size: 20px;
     color:crimson;
     font-weight:900;
     text-decoration: none;
