--- a/Attendance.css
+++ b/Attendance.css
@@ -1,6 +1,6 @@
 body{
     background: blue;
-    height:auto;
+    height:100vh;
 }
 h1
 {
@@ -8,7 +8,7 @@ h1
    height: auto;
    width: fit-content;
    margin-left: 570px;
-   margin-top: 8px;
+   margin-top: 4px;
    padding: 12px;
    border-radius: 30px;
    color:maroon;
